матрица, зарядка жезлов, наполнение предметов