@@ -5,6 +5,7 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 
 import java.util.LinkedHashMap;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 
@@ -12,6 +13,7 @@ public record CrucibleRecipeDefinition(
         ResourceLocation id,
         String research,
         Ingredient catalyst,
+        String catalystAspect,
         ItemStack output,
         Map<String, Integer> aspects
 ) {
@@ -19,6 +21,7 @@ public record CrucibleRecipeDefinition(
         Objects.requireNonNull(id, "id");
         research = Objects.requireNonNull(research, "research").trim();
         Objects.requireNonNull(catalyst, "catalyst");
+        catalystAspect = catalystAspect == null ? "" : catalystAspect.trim();
         output = Objects.requireNonNull(output, "output").copy();
         if (output.isEmpty()) {
             throw new IllegalArgumentException("Crucible output cannot be empty");
@@ -33,7 +36,19 @@ public record CrucibleRecipeDefinition(
         if (validated.isEmpty()) {
             throw new IllegalArgumentException("Crucible recipe needs essentia");
         }
-        aspects = Map.copyOf(validated);
+        aspects = Collections.unmodifiableMap(validated);
+    }
+
+    public CrucibleRecipeDefinition(ResourceLocation id, String research,
+            Ingredient catalyst, ItemStack output, Map<String, Integer> aspects) {
+        this(id, research, catalyst, "", output, aspects);
+    }
+
+    public boolean matchesCatalyst(ItemStack stack) {
+        if (!catalyst.test(stack)) return false;
+        return catalystAspect.isBlank()
+                || com.thaumcraftmodern.item.EssentiaPhialItem.aspect(stack)
+                .filter(catalystAspect::equals).isPresent();
     }
 
     @Override
